GSvar: improved QC plot dialog (several instances can be opened and added more filter options)

--- a/src/GSvar/DBQCWidget.ui
+++ b/src/GSvar/DBQCWidget.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>900</width>
-    <height>600</height>
+    <width>950</width>
+    <height>800</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>900</width>
-    <height>600</height>
+    <width>950</width>
+    <height>800</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,1">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,1">
    <property name="spacing">
     <number>3</number>
    </property>
@@ -40,14 +40,26 @@
      <property name="spacing">
       <number>3</number>
      </property>
-     <item row="4" column="1">
-      <widget class="QLineEdit" name="highlight">
-       <property name="clearButtonEnabled">
-        <bool>false</bool>
-       </property>
+     <item row="2" column="1" colspan="2">
+      <widget class="QComboBox" name="sample_type">
+       <item>
+        <property name="text">
+         <string/>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>normal only</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>tumor only</string>
+        </property>
+       </item>
       </widget>
      </item>
-     <item row="4" column="0">
+     <item row="12" column="0">
       <widget class="QLabel" name="label_6">
        <property name="toolTip">
         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Processed sample names to highlight.&lt;/p&gt;&lt;p&gt;Invalid processed sample names are listed in the tooltip of the text input field.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -57,12 +69,90 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_11">
+       <property name="text">
+        <string>Run side:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="0">
+      <widget class="QLabel" name="label_14">
+       <property name="text">
+        <string>Run before:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>Sample tissue:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="DBComboBox" name="run_device"/>
+     </item>
+     <item row="0" column="1">
+      <widget class="DBComboBox" name="term"/>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>Processing modus:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1" colspan="2">
+      <widget class="QLineEdit" name="processing_input"/>
+     </item>
+     <item row="9" column="0">
+      <widget class="QLabel" name="label_13">
+       <property name="text">
+        <string>Run after:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_15">
+       <property name="text">
+        <string>Run device:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>QC metric 1:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1" colspan="2">
+      <widget class="DBComboBox" name="processing_system"/>
+     </item>
+     <item row="0" column="2" rowspan="2">
+      <widget class="QToolButton" name="swap_metrics">
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Swap metrics (if two are given).&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="GSvar.qrc">
+         <normaloff>:/Icons/Exchange.png</normaloff>:/Icons/Exchange.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>Processing system:</string>
        </property>
       </widget>
+     </item>
+     <item row="8" column="1" colspan="2">
+      <widget class="QComboBox" name="run_side"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_7">
@@ -74,23 +164,14 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="DBComboBox" name="term2"/>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_4">
+     <item row="6" column="0">
+      <widget class="QLabel" name="label_12">
        <property name="text">
-        <string>QC metric 1:</string>
+        <string>Processing input:</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="1" colspan="2">
-      <widget class="DBComboBox" name="system"/>
-     </item>
-     <item row="0" column="1">
-      <widget class="DBComboBox" name="term"/>
-     </item>
-     <item row="4" column="2">
+     <item row="12" column="2">
       <widget class="QToolButton" name="highlight_btn">
        <property name="toolTip">
         <string/>
@@ -107,45 +188,44 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="2" rowspan="2">
-      <widget class="QToolButton" name="swap_metrics">
-       <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Swap metrics (if two are given).&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-       <property name="text">
-        <string>...</string>
-       </property>
-       <property name="icon">
-        <iconset resource="GSvar.qrc">
-         <normaloff>:/Icons/Exchange.png</normaloff>:/Icons/Exchange.png</iconset>
-       </property>
-      </widget>
+     <item row="1" column="1">
+      <widget class="DBComboBox" name="term2"/>
      </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_8">
-       <property name="text">
-        <string>Sample type</string>
-       </property>
-      </widget>
+     <item row="9" column="1" colspan="2">
+      <widget class="QLineEdit" name="run_after"/>
+     </item>
+     <item row="10" column="1" colspan="2">
+      <widget class="QLineEdit" name="run_before"/>
      </item>
      <item row="3" column="1" colspan="2">
-      <widget class="QComboBox" name="sample_type">
-       <item>
-        <property name="text">
-         <string>tumor and normal</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>tumor only</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>normal only</string>
-        </property>
-       </item>
+      <widget class="QComboBox" name="sample_tissue"/>
+     </item>
+     <item row="5" column="1" colspan="2">
+      <widget class="QComboBox" name="processing_modus"/>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_8">
+       <property name="text">
+        <string>Sample type:</string>
+       </property>
       </widget>
+     </item>
+     <item row="12" column="1">
+      <widget class="QLineEdit" name="highlight">
+       <property name="clearButtonEnabled">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="0">
+      <widget class="QLabel" name="label_16">
+       <property name="text">
+        <string>Project type:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="1">
+      <widget class="QComboBox" name="project_type"/>
      </item>
     </layout>
    </item>
@@ -171,7 +251,7 @@
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Statistics for the first quality metric.&lt;/p&gt;&lt;p&gt;Values of processed samples with 'bad' quality are excluded. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="title">
-      <string>Statistics</string>
+      <string>Statistics metric 1</string>
      </property>
      <property name="flat">
       <bool>true</bool>
@@ -241,22 +321,6 @@
     </widget>
    </item>
    <item>
-    <spacer name="verticalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>5</width>
-       <height>5</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
       <string>Plot</string>
@@ -280,18 +344,19 @@
       <property name="spacing">
        <number>3</number>
       </property>
-      <item row="3" column="1">
-       <spacer name="verticalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
+      <item row="2" column="1">
+       <widget class="QToolButton" name="export_btn">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Copy values of QC metric 1 to clipboard.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
+        <property name="text">
+         <string>...</string>
         </property>
-       </spacer>
+        <property name="icon">
+         <iconset resource="GSvar.qrc">
+          <normaloff>:/Icons/CopyClipboard.png</normaloff>:/Icons/CopyClipboard.png</iconset>
+        </property>
+       </widget>
       </item>
       <item row="0" column="0" rowspan="4">
        <widget class="QChartView" name="plot">
@@ -320,6 +385,19 @@
         </property>
        </widget>
       </item>
+      <item row="3" column="1">
+       <spacer name="verticalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
       <item row="1" column="1">
        <spacer name="verticalSpacer_4">
         <property name="orientation">
@@ -335,20 +413,6 @@
          </size>
         </property>
        </spacer>
-      </item>
-      <item row="2" column="1">
-       <widget class="QToolButton" name="export_btn">
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Copy values of QC metric 1 to clipboard.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-        <property name="text">
-         <string>...</string>
-        </property>
-        <property name="icon">
-         <iconset resource="GSvar.qrc">
-          <normaloff>:/Icons/CopyClipboard.png</normaloff>:/Icons/CopyClipboard.png</iconset>
-        </property>
-       </widget>
       </item>
      </layout>
     </widget>
