GSvar: moved all IGV code to IGVSession and IGVSessionManager, added workers for launching IGV and running commands

--- a/src/GSvar/GSvar.qrc
+++ b/src/GSvar/GSvar.qrc
@@ -123,7 +123,6 @@
         <file>Icons/settings.png</file>
         <file>Icons/check.png</file>
         <file>Icons/Virus.png</file>
-        <file>Icons/igv_message_normal.png</file>
-        <file>Icons/igv_message_virus.png</file>
+        <file>Icons/IGV_active.png</file>
     </qresource>
 </RCC>
