--- a/src/GSvar/IgvLogWidget.ui
+++ b/src/GSvar/IgvLogWidget.ui
@@ -42,11 +42,34 @@
     <number>3</number>
    </property>
    <item>
-    <widget class="QLabel" name="label_3">
-     <property name="text">
-      <string>IGV history:</string>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>3</number>
      </property>
-    </widget>
+     <item>
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>IGV history:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="igv_instance"/>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="QTableWidget" name="table">
