--- a/src/GSvar/IgvLogWidget.ui
+++ b/src/GSvar/IgvLogWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>900</width>
-    <height>560</height>
+    <width>1400</width>
+    <height>750</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,8 +18,8 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>900</width>
-    <height>500</height>
+    <width>1400</width>
+    <height>750</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -93,17 +93,22 @@
      </attribute>
      <column>
       <property name="text">
-       <string>time</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
        <string>command</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>status</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>duration [s]</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>answer</string>
       </property>
      </column>
     </widget>
