GSvar: fixed error handling in IGVStartWorker; minor other improvements.

--- a/src/GSvar/IgvLogWidget.ui
+++ b/src/GSvar/IgvLogWidget.ui
@@ -49,7 +49,7 @@
      <item>
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>IGV history:</string>
+        <string>IGV instance:</string>
        </property>
       </widget>
      </item>
