--- a/src/GSvar/ProcessedSampleWidget.ui
+++ b/src/GSvar/ProcessedSampleWidget.ui
@@ -1184,13 +1184,13 @@
             <property name="minimumSize">
              <size>
               <width>450</width>
-              <height>150</height>
+              <height>50</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>150</height>
+              <height>16777215</height>
              </size>
             </property>
             <property name="frameShape">
@@ -1270,13 +1270,13 @@
             <property name="minimumSize">
              <size>
               <width>450</width>
-              <height>100</height>
+              <height>50</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>100</height>
+              <height>16777215</height>
              </size>
             </property>
             <property name="frameShape">
@@ -1373,13 +1373,13 @@
             <property name="minimumSize">
              <size>
               <width>450</width>
-              <height>100</height>
+              <height>50</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>100</height>
+              <height>16777215</height>
              </size>
             </property>
             <property name="frameShape">
