--- a/src/GSvar/GSvar.qrc
+++ b/src/GSvar/GSvar.qrc
@@ -124,5 +124,6 @@
         <file>Icons/check.png</file>
         <file>Icons/Virus.png</file>
         <file>Icons/IGV_active.png</file>
-    </qresource>
+        <file>Resources/CCR_supported_genes.txt</file>
+        <file>Resources/CCR80_GRCh38.bed</file>    </qresource>
 </RCC>
